<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <!--    <string name=""></string>   -->


    <!--Emulator URL-->
    <!--<string name="server_url">http://10.0.2.2:5000/</string>-->
    <!--Phone URL-->
    <!--<string name="server_url">localhost:5000/</string>-->


    <!--Universal-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>


    <!--Activity Names-->
    <string name="app_name">Iskandar Companion App</string>
    <string name="iskandar_initial_setup">Iskandar Initial Setup</string>
    <string name="iskandar_home">Home</string>
    <string name="lighting">Lighting</string>
    <string name="events">Events</string>
    <string name="background">Background</string>
    <string name="ical_link">iCal Link</string>
    <string name="location">Location</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>


    <!--Splash-->
    <string name="welcome">Welcome</string>
    <string name="authors">Created by the Masters of Mirrors</string>
    <string name="retry_connection">Retry Connection</string>

    <!--Welcome-->
    <string name="title_activity_test">Iskandar Companion App</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_title">Welcome to the Iskandar Companion App!</string>
    <string name="welcome_desc">You will need the following information to setup Iskandar the Smart Mirror:</string>
    <string name="welcome_help_title">Any Questions?</string>
    <string name="welcome_help_desc">Contact us at Iskandarce05@gmail.com if you have any questions or encounter a problem.</string>
    <string name="bluetooth_information">Bluetooth Information</string>
    <string name="bluetooth_list">
        <ul>
            <li>   WiFi SSID (Name)\n</li>
            <li>   WiFi Password</li>
        </ul>
    </string>
    <string name="weather_list">
        <ul>
            <li>   City\n</li>
            <li>   State\n</li>
            <li>   ZIP Code</li>
        </ul>
    </string>
    <string name="traffic_list">
        <ul>
            <li>   Home Address\n</li>
            <li>   Work/School Address</li>
        </ul>
    </string>
    <string name="google_calendar_information">Google Calendar Information</string>
    <string name="google_calendar_list">
        <ul>
            <li>   iCal Link</li>
        </ul>
    </string>

    <string name="welcome_connection_error_title">Something Went Wrong</string>
    <string name="welcome_connection_error_desc">The connection to the server timed out.  Make sure you are near your mirror and try connecting again.</string>


    <!--Lighting-->
    <string name="lightness">Lightness</string>
    <string name="brightness">Brightness</string>
    <string name="manual">Manual</string>
    <string name="reset">Reset</string>
    <string name="hex_code">Hex Code</string>
    <string name="hex_error_message">Please enter a hex color code (contains only A–F and 0–9).</string>
    <string name="color_confirmation">Color Confirmation</string>
    <string name="keep_color_confirm">Do you want to keep this color?</string>
    <string name="keep_color">Keep Color</string>
    <string name="choose_new_color">Choose New Color</string>


    <!--Events-->
    <string name="refresh_mirror_confirm">Would you like to refresh the mirror?</string>
    <string name="welcome_back">Welcome Back</string>


    <!--Background-->
    <string name="coming_soon">Coming Soon!</string>
    <string name="coming_soon_desc">This feature isn\'t available yet on Iskandar.  It\'s being worked on!</string>


    <!--iCal Link-->
    <string name="google_ical">Google iCal Link</string>
    <string name="google_ical_title">What is a Google iCal Link?</string>
    <string name="google_ical_explanation">A Google iCal Link is a link that will be used to link Iskandar to your Google Calendar.</string>
    <string name="google_ical_step1">1. Click this link:\nhttps://calendar.google.com/calendar/u/0/r</string>
    <string name="google_ical_step2">2. Under the \"My calendars\" section on the left side, hover over your username.</string>
    <string name="google_ical_step3">3. Click the three dots and then click \"Settings and sharing\".</string>
    <string name="google_ical_step4">4. Scroll down to the \"Secret address in iCal format\" section near the bottom.</string>
    <string name="google_ical_step5">5. Copy that link and paste it in the textbox below"</string>
    <string name="ical_error_message">Please enter a valid iCal link.</string>


    <!--Change Location-->
    <string name="change_location">Change Location</string>

    <string name="weather_information">Weather Information</string>
    <string name="city">City</string>
    <!--<string name="state">State</string>-->
    <string name="ZIP_code">ZIP Code</string>

    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>

    <string name="traffic_information">Traffic Information</string>
    <string name="home_address">Home Address</string>
    <string name="work_school_address">Work/School Address</string>

    <string name="city_error_message">Please enter a city.</string>
    <string name="state_error_message">Please enter a state.</string>
    <string name="zip_error_message">Please enter a 5-digit ZIP code.</string>
    <string name="home_address_error_message">Please enter a home address.</string>
    <string name="work_school_address_error_message">Please enter either your work or school address.</string>


    <!--Bluetooth-->
    <string name="bt_title">Find Your Mirror</string>
    <string name="bt_ssid_input">WiFi SSID</string>
    <string name="bt_password_hint">WiFi Password</string>
    <string name="disc_title">Discovered Devices:</string>
    <string name="btn_visible">Find Visible</string>
    <string name="btn_enter_wifi">Enter</string>

    <string name="bt_connection_success">Connected to Iskandar</string>
    <string name="bt_output_stream_failure">Failed to register OutputStream to Iskandar. Please make sure you are paired to the device.</string>
    <string name="bt_ssid_failure">Failed to send SSID. Make sure you are paired to the device.</string>
    <string name="bt_password_failure">Failed to send Password. Make sure you are paired to the device.</string>
    <string name="bt_input_stream_failure">Failed to register InputStream to Iskandar. Please make sure you are paired to the device.</string>
    <string name="bt_ip_address_failure">Failed to obtain device IP. Make sure you are paired to the device.</string>
    <string name="bt_sent_info_success">Successfully Sent Network Information</string>
    <string name="bt_connection_failure">Could Not Connect to Iskandar Mirror. Please make sure you are paired.</string>


    <!--Rest-->
    <string name="rest_get_error">Could not load information from Iskandar.  Please try again.</string>
    <string name="rest_put_error">Could not send information to Iskandar.  Please try again.</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
